@@ -1,3 +1,7 @@
+2007-03-01  J. Tang  <jtang@tresys.com>
+
+	* added additional accessors to the seaudit_avc_message_t object.
+
 2007-02-28  J. Tang  <jtang@tresys.com>
 
 	* added apol_mls_level_create_from_mls_level() and
